# EasyStrat-Mail-Sync

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
easystrat/: __init__.py  cli.py  config.py  easyverein_client.py  export.py  main.py  strato_selenium.py  strato_sieve.py  sync.py  sync_selenium.py
