[tool.poetry]
name = "easystrat-mail-sync"
version = "1.0.0"
description = "Synchronisiert E-Mail-Adressen aus EasyVerein mit Strato Weiterleitungen"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "easystrat" }]

[tool.poetry.scripts]
easystrat = "easystrat.cli:cli"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.0"
python-easyverein = "^2.3.0"
sievelib = "^1.4.0"
selenium = "^4.15.0"
webdriver-manager = "^4.0.0"
python-dotenv = "^1.0.0"
httpx = "^0.27.0"
colorlog = "^6.8.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.5.1"
mypy = "^1.8.0"
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
extend-ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
